--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,130 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+* {
     margin: 0;
-    padding: 20px;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
 }
 
-h1, h2 {
+header {
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Sheryl {
+    color: #fff;
+    text-align: center;
+    padding: 266px 0;
+}
+
+.Sheryl h1 {
+    font-size: 4em;
+    margin: 0;
+    font-weight: bold;
+}
+
+.Sheryl h1 span {
+    color: #ffacac;
+}
+
+.Sheryl p {
+    font-size: 1.5em;
+    margin-top: 10px;
+    letter-spacing: 2px;
+    font-weight: lighter;
+    color: #bebebe;
+}
+
+/* Estilos para el menú fijo superior */
+.navbar {
+    width: 100%;
+    height: 15vh;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.navbar a {
+    color: #000;
+    font-size: 17px;
+    position: relative;
+}
+
+/* linea inferior en hover */
+.navbar a::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #000;
+    transition: width 0.3s ease;
+}
+
+ /* Efecto hover */
+.navbar a:hover::before {
+    width: 100%;
+}
+
+
+.container {
+    padding: 90px 20px;
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    flex: 1 1 calc(33.333% - 20px);    /* Tres tarjetas por fila, menos el espaciado */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.card h2 {
+    margin-bottom: 10px;
     color: #333;
 }
 
-.container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: auto;
+.card p {
+    line-height: 1.6;
+    color: #666;
 }
 
-.biografia, .educacion, .experiencia, .logros {
-    margin-bottom: 20px;
+.card ol {
+    padding-left: 20px;
+}
+
+.card li {
+    margin-bottom: 10px;
+    color: #444;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
